clusters/build-clusters/build10/gpu/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-nfd
---
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-gpu-operator
---
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  annotations:
  name: gpu-cluster-policy
spec:
  operator:
    defaultRuntime: crio
  dcgm:
    enabled: true
  gfd:
    enabled: true
  dcgmExporter:
    enabled: true
    serviceMonitor:
      enabled: true
  driver:
    enabled: true
    useNvidiaDriverCRD: true
  devicePlugin:
    enabled: true
  nodeStatusExporter:
    enabled: true
  daemonsets:
    updateStrategy: RollingUpdate
  toolkit:
    enabled: true
